@@ -202,6 +202,9 @@ detailed_log = 1
 /* Colored terminal output(1/0) */
 logger_colors = 1
 
+/* Header with real user ip(leave empty to disable) */
+http_realip = ""
+
 [Advanced]
 /* DO NOT CHANGE THIS SETTINGS UNTIL YOU KNOW WHAT YOU ARE DOING */
 
